[project]
name = "gdelt-pipeline"
version = "0.1.0"
description = "A modular data pipeline for the GDELT 2.0 Events Database"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "selenium>=4.0",
    "webdriver-manager>=4.0",
    "tqdm>=4.60",
]

[tool.uv]
package = false
